@@ -1,3 +1,8 @@
+*jekyll-1.4.3 (18 Jan 2014)
+
+  18 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.3.ebuild:
+  [www-apps/jekyll] Version bump.
+
 *jekyll-1.4.2 (17 Dec 2013)
 
   17 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.2.ebuild,
